# ProyectoFinalParadigmas

./: .gitignore  .pids  README.md  demo.sh  docker-compose.yml  start-all.sh  stop-all.sh
Atlas/: atlas.java
Ground/: ground.pl
atlas/: README.md  pom.xml
atlas/src/main/java/com/kepler/atlas/: AgencyRegistry.java  AtlasMain.java  PriorityClassifier.java  RestServer.java  TcpServer.java
database/: .env
ground/: README.md  cpanfile  ground.pl
ground/lib/Kepler/: DB.pm  Display.pm
ground/sql/: schema.sql  seed.sql
hermes/: README.md  hermes.cabal
hermes/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hermes/src/: ErrorCorrection.hs  Hashing.hs  Main.hs  Protocol.hs
voyager/: README.md  knowledge_base.pl  voyager.pl
