cabal-version: 3.4
name:          hermes
version:       1.0.0
synopsis:      HERMES — Kepler relay node (Haskell)
license:       MIT

common defaults
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unused-do-bind
  build-depends:
      base                >= 4.14 && < 5
    , aeson               >= 2.1
    , bytestring          >= 0.11
    , text                >= 2.0
    , network             >= 3.1
    , cryptonite          >= 0.30
    , memory              >= 0.18
    , time                >= 1.12
    , containers          >= 0.6
    , base16-bytestring   >= 1.0

executable hermes
  import:         defaults
  main-is:        Main.hs
  hs-source-dirs: src
  other-modules:
      Hashing
    , ErrorCorrection
    , Protocol
